# wanderer

./: .gitignore  Cargo.toml  README.md  build_shaders.sh  hdr.frag.glsl  hdr.vert.glsl  lighting.frag.glsl  lighting.vert.glsl  star.frag.glsl  star.vert.glsl  ui.frag.glsl  ui.vert.glsl  urls.txt
src/: debug.rs  hdr.rs  main.rs  models.rs  objects.rs  platforms.rs  postproc.rs  scene.rs  star.rs  ui_app.rs  utils.rs  window.rs
src/support/: buffer.rs  command_buffer.rs  descriptor.rs  image.rs  mod.rs  renderer.rs  shader.rs  texture.rs  utils.rs
